<resources>
    <string name="app_name">EnsinaMente</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string-array name="activity_metodo">
        <item>"FlashCards"</item>
        <item>"Pomodoro"</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" color="withe">Ensina Mente</string>
    <string name="second_fragment_label">Ensina Mente</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Bem-Vindo</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_principal2">PrincipalActivity2</string>
    <string name="comece_os_estudos_j">Comece os estudos já</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="crie_sua_conta_gratis">Crie Sua Conta Gratis</string>
    <string name="vamos_come_ar_a_estudar">Vamos começar a estudar</string>
    <string name="j_tenho_conta">Já tenho conta</string>
    <string name="textview003">TextView</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta grátis</string>
    <string name="nome">Nome</string>
    <string name="nameEmail">Email</string>
    <string name="nameSenha">Senha</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="ja_tenho_conta">Ja tenho conta</string>
    <string name="facebook_app_id">359518819270607</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="todo2">TODO</string>
    <string name="crie_suas_metas_de_estudos_aqui">Crie suas metas de estudos aqui</string>
    <string name="ex_31_08_2022">Ex:31/08/2022</string>
    <string name="qual_sua_motiva_o_de_estudo">Qual sua motivação de estudo?</string>
    <string name="qual_o_nome_da_tarefa">Qual o nome da tarefa?</string>
    <string name="todo6">TODO</string>
    <string name="nome_da_tarefa">Nome da Tarefa</string>
    <string name="disciplina_ou_tipo_de_estudo">Disciplina ou Tipo de Estudo</string>
    <string name="crie_sua_tarefa">Crie sua tarefa</string>
    <string name="todo4">TODO</string>
    <string name="flashcards">FlashCards</string>
    <string name="todo5">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo0">TODO</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="string_pomodoro" />
    <string name="Pomodoro">Pomodoro</string>
    <string name="m_todo_flashcards">Método FlashCards</string>
    <string name="nome_da_tarefaMetodo">Nome da Tarefa</string>
    <string name="frente">Frente</string>
    <string name="Verso">hint</string>
    <string name="verso2">Verso</string>
    <string name="verso">Verso</string>
    <string name="verso3">Verso</string>
    <string name="frente2">Frente</string>
    <string name="todo3">TODO</string>
    <string name="todo8">TODO</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="entrar">Entrar</string>
    <string name="vamos_come_ar_os_estudos">Vamos começar os estudos</string>
    <string name="fa_a_sempre_o_seu_melhor">Faça sempre o seu melhor!</string>
    <string name="ok2">ok</string>
    <string name="todo1">TODO</string>
    <string name="ok0">ok</string>
    <string name="button2">Button</string>
    <string name="utilizando_met_dos_n_e_t_cnicas_de_estudo">Utilizando Metódos \n e Técnicas de Estudo</string>
    <string name="aprenda_de_forma_simples_e_f_cil">Aprenda de forma simples e fácil</string>
    <string name="todo004">TODO</string>
    <string name="button">Button</string>
    <string name="ok">ok</string>
    <string name="acessar_tarefas2">Acessar Tarefas</string>
    <string name="crie_sua_conta_gratuitamente">Crie sua conta gratuitamente</string>
    <string name="cart_o_basico">Cartão Basico</string>
    <string name="cart_es_basicos">Cartões Basicos</string>
    <string name="nome_tarefa">Nome Tarefa</string>
    <string name="textview3">TextView</string>
    <string name="frente3">Frente</string>
    <string name="textview2">TextView</string>
    <string name="todoO">TODO</string>
    <string name="todo00">TODO</string>
    <string name="todo001">TODO</string>
    <string name="todo002">TODO</string>
    <string name="today_s_achievement">Today\'s achievement :</string>
    <string name="today">Today</string>
    <string name="_25_m">25 M</string>
    <string name="tempo_de_estudo">Tempo de Estudo:</string>
    <string name="start">Start</string>
    <string name="_10_00">10 : 00</string>
    <string name="end">End</string>
    <string name="home">Home</string>
    <string name="again">Again</string>
    <string name="todo003">TODO</string>
    <string name="hoje">Hoje</string>
    <string name="_60_m">60 M</string>
    <string name="todo">TODO</string>
    <string name="_35_m">35 M</string>
    <string name="textview005">TextView</string>
    <string name="textview006">TextView</string>
    <string name="tarefa">Tarefa</string>
    <string name="textview007">TextView</string>
    <string name="disciplina008">Disciplina</string>
    <string name="textview009">TextView</string>
    <string name="textview0010">TextView</string>
    <string name="m_todo">Método</string>
    <string name="textview001">TextView</string>
    <string name="criticidade">Criticidade</string>
    <string name="disciplina002">Disciplina</string>
    <string name="textview002">TextView</string>
    <string name="nome_tarefa004">Nome Tarefa</string>
    <string name="disciplina">Disciplina</string>
    <string name="textview15">TextView</string>
    <string name="textview16">TextView</string>
    <string name="textview14">TextView</string>
    <string name="nome_tarefa13">Nome Tarefa</string>
    <string name="textview12">TextView</string>
    <string name="motiva_o">Motivação</string>
    <string name="textview11">TextView</string>
    <string name="data">Data</string>
    <string name="buttonVoltarListTaf">Voltar</string>
    <string name="voltar">Voltar</string>
    <string name="string_voltar">voltar</string>
    <string name="flashcardsEscolhaMetodos">FlashCards</string>
    <string name="pomodoroEscolhaMetodos">Pomodoro</string>
    <string name="m_todos_e_t_cnicas">Métodos e Técnicas</string>
    <string name="todoEscolhaMetodos">TODO</string>
    <string name="todoEscolhaMetodos2">TODO</string>
    <string name="todoEscolhaMetodos3">TODO</string>
    <string name="m_todo_srs">Método SRS</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="acessar_tarefas">Acessar Tarefas</string>
    <string name="todotv">TODO</string>
    <string name="todotvVoltaPrincipal">TODO</string>
    <string name="textview">textview</string>
    <string name="frente_do_cart_o">Frente do cartão:</string>
    <string name="verso_do_cart_o">Verso do Cartão:</string>
    <string name="textviewVerso">TextViewVerso</string>
    <string name="criticidadetaf">Criticidade :</string>
    <string name="m_todo2">Método :</string>
    <string name="disciplina2">Disciplina :</string>
    <string name="tvc2">TVC</string>
    <string name="tvm2">TVM</string>
    <string name="tvd2">TVD</string>
    <string name="tvv2">TVV</string>
    <string name="nome_tarefa2">Nome Tarefa :</string>
    <string name="data2">Data</string>
    <string name="data3">Data:</string>
    <string name="motivacao3">Motivacao</string>
    <string name="motiva_o3">Motivação:</string>
    <string name="nome_meta3">Nome Meta</string>
    <string name="nome_tarefa3">Nome Tarefa:</string>
</resources>